Thu Feb 12 10:36:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3531_Regression/client.cpp:
          Unicode fix

Thu Feb 12 10:36:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3531_Regression/server.cpp:
          Unicode fix

Thu Feb 12 10:28:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3567_Regression/*:
          Added new regression test for bug 3567. The test is not ready yet, working
          on extending it to reproduce this bug.

Thu Feb 12 08:52:44 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/AMH_Oneway/run_test.pl:
          Fixed a bug in this script

Thu Feb 12 02:39:44 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/fe/idl.ll:
        * TAO_IDL/fe/lex.yy.cpp:

          Fixed a small syntax problem from
          Wed Feb 11 21:03:46 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

Thu Feb 12 00:02:27 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Bug_3531_Regression/Bug_3531_Regression.mpc:
        * tests/Bug_3531_Regression/test_i.h:
        * tests/Bug_3531_Regression/test_i.cpp:

          Fuzz fixes.

Wed Feb 11 21:03:46 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/lex.yy.cpp(idl_get_pragma_string):
        * TAO_IDL/fe/idl.ll(idl_get_pragma_string):

          Beefed up error checking to catch the case where one or both
          quote are missing from the #pragma prefix string, and output
          a syntax error instead of crashing. Thanks to Bogdan Jeram
          <bjeram at eso dot org> for reporting the bug. This fix closes
          [BUGID:3568].

Wed Feb 11 16:14:04 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/Advanced/ch_8_and_10/Advanced_ch_8_and_10.mpc: Zapped

          libs += TAO_PortableServer

          based upon recommendation of Johnny Willemsen.
