@@ -1,1 +1,0 @@
-static Client_Strategy_Factory "-ORBTransportMuxStrategy EXCLUSIVE"
