@@ -1,2 +1,0 @@
-
-static Client_Strategy_Factory "-ORBTransportMuxStrategy MUXED"
