@@ -1,3 +1,0 @@
-# $Id$
-#
-static Server_Strategy_Factory "-ORBconcurrency thread-per-connection"
